# PyAPD

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
PyAPD/: __init__.py  apds.py  ebsd_utils.py  geometry_utils.py  log_res.py  log_res_utils.py  mtex_interface.py  override_optimality_condition.py
data/2D_Tata_Steel_logo/: tata_grains.txt  tata_grains_clean.txt
data/2D_Tata_Steel_new_example/: Sample_LC steel_grain_file.txt  grains_mean_orientation.txt  sample_lc_steel_grain_file_MTEX.txt  sample_lc_steel_grain_file_MTEX2.txt  sample_lc_steel_grain_file_MTEX3.txt  sample_lc_steel_grain_file_MTEX4.txt
data/2D_Tata_Steel_paper_example/: grains_mean_orientation_final.txt  sample_lc_steel_grain_file_final.txt  sample_lc_steel_grain_file_small_removed.txt
logo/: logo_generation.fdb_latexmk  logo_generation.fls  logo_generation.tex
notebooks/extensions/: April26.ipynb  continuation_prototype.ipynb  gmot_x_apd.ipynb  jump_flood.ipynb  jump_flood_pyapd.ipynb  pysdot_integration.ipynb  results.vtk  results_ot.vtk  utils_prototyping.ipynb
notebooks/extensions/grain_maps_fitting/: fresh_start.ipynb  geotorch.ipynb  log_reg_full-automated.ipynb  (+9 more)
notebooks/paper_examples/: adjust_As_test.ipynb  checking_moments.ipynb
notebooks/prototyping/: Google_colab_template.ipynb  example_usage.ipynb
notebooks/tutorials/: ebsd_interoperability.ipynb  example_usage.ipynb
tests/: conftest.py  test_apds.py  test_geometry_utils.py  test_log_res_utils.py  test_mtex_interface.py
(+21 files in other folders)
